--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,14 +1,25 @@
 #root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
+    max-width: 1000px;
+    width: 100%;
+    height: 100%;
+    margin: auto;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.card {
-    padding: 2em;
+.app {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
 }
 
-.read-the-docs {
-    color: #888;
+.pageSelector {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
 }
