--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,14 +13,6 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-body {
-    margin: 0;
-    display: flex;
-    place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
-}
-
 h1 {
     font-size: 3.2em;
     line-height: 1.1;
@@ -29,16 +21,17 @@ h1 {
 button {
     border-radius: 8px;
     border: 1px solid transparent;
-    padding: 0.6em 1.2em;
+    padding: 4px 4px;
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
+    background-color: #f0f0f0;
     cursor: pointer;
     transition: border-color 0.25s;
+    border-color: #e2e2e2;
 }
 button:hover {
-    border-color: #646cff;
+    border-color: #525252;
 }
 button:focus,
 button:focus-visible {
@@ -49,8 +42,5 @@ button:focus-visible {
     :root {
         color: #213547;
         background-color: #ffffff;
-    }
-    button {
-        background-color: #f9f9f9;
     }
 }
