--- a/frontend/src/components/ServerTable/ServerTable.css
+++ b/frontend/src/components/ServerTable/ServerTable.css
@@ -17,6 +17,15 @@
     width: 1%;
 }
 
+.serverTableMessage {
+    height: 20px;
+    display: flex;
+    flex: row;
+    justify-content: start;
+    text-align: start;
+    margin-bottom: 8px;
+}
+
 .cell {
     display: flex;
     flex-direction: row;
