--- a/frontend/src/components/ServerAdminPanel/ServerAdminPanel.css
+++ b/frontend/src/components/ServerAdminPanel/ServerAdminPanel.css
@@ -8,3 +8,17 @@
     overflow-x: auto;
     white-space: pre-wrap;
 }
+
+.serverAdminPanel {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: start;
+}
+
+.serverAdminPanelButtonGrid {
+    display: grid;
+    grid-template-columns: 150px 1fr;
+    gap: 8px 12px;
+    align-items: center;
+}
