--- a/frontend/src/components/ServerTable/ServerTable.css
+++ b/frontend/src/components/ServerTable/ServerTable.css
@@ -27,9 +27,11 @@
 }
 
 .cell {
+    padding-left: 8px;
+    padding-right: 8px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .actionRow {
