--- a/frontend/src/components/ConfirmDialog/ConfirmDialog.css
+++ b/frontend/src/components/ConfirmDialog/ConfirmDialog.css
@@ -12,11 +12,13 @@
     background: #fff;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
 }
 
 .confirmDialogButtons {
+    width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 20px;
 }
